--- a/staticfiles/css/global.css
+++ b/staticfiles/css/global.css
@@ -1,10 +1,10 @@
-.form-style form input, form textarea, form select {
+.form-style input, textarea, select {
     width: 100%;
     padding: 0.5rem;
     border: 2px solid #bcbcbc;
     border-radius: 0.375rem;
 }
-.form-style form input:focus, form textarea:focus, form select:focus {
+.form-style input:focus, textarea:focus, select:focus {
     outline: none;
     border-color: #674ea7;
     box-shadow: 0 0 0 3px #674ea7;
