--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -167,7 +167,7 @@
         classNameString = "flex flex-col items-center justify-center min-h-[24rem] p-6";
         htmlString = `
             <div class="flex flex-col items-center justify-center min-h-[24rem] p-6">
-                <img src="{% static 'image/sedih-banget.png' %}" alt="Sad face" class="w-32 h-32 mb-4"/>
+                <img src="{% static 'images/sad_cat.gif' %}" alt="Sad face" class="w-32 h-32 mb-4"/>
                 <p class="text-center text-gray-600 mt-4">Oops! Tidak ada produk yang tersedia.</p>
             </div>
         `;
