--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -164,12 +164,12 @@
     let classNameString = "";
 
     if (productEntries.length === 0) {
-        classNameString = "flex flex-col items-center justify-center min-h-[24rem] p-6";
+        classNameString = "flex flex-col items-center justify-center min-w-[40rem] min-h-[24rem] p-6";
         htmlString = `
             <div class="flex flex-col items-center justify-center min-h-[24rem] p-6">
-                <img src="{% static 'images/sad_cat.gif' %}" alt="Sad face" class="w-32 h-32 mb-4"/>
-                <p class="text-center text-gray-600 mt-4">Oops! Tidak ada produk yang tersedia.</p>
-            </div>
+              <img src="{% static 'images/sad_cat.gif' %}" alt="Sad face" class="w-64 h-64 mb-4"/> <!-- Memperbesar ukuran gambar -->
+              <p class="text-center text-gray-600 mt-4">Oops! Tidak ada produk yang tersedia.</p>
+          </div>
         `;
     }
     else {
